# diffvec

./: Cargo.toml
core/: Cargo.toml
core/src/: diff.rs  lib.rs  map.rs  poly.rs  prod.rs  scalar.rs  vector.rs  vector2.rs  vector3.rs  vector4.rs  zero.rs
derive/: Cargo.toml
derive/src/: lib.rs
